// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmailSignupModal component renders correctly 1`] = `
<Fragment>
  <Styled(Button)
    customStyle="shadow-button"
    onClick={[Function]}
  >
    <Styled(RichText) />
  </Styled(Button)>
</Fragment>
`;

exports[`EmailSignupModal component renders correctly when button is clicked 1`] = `
<Fragment>
  <errorBoundaryComponent
    className=""
    colSet={
      Object {
        "large": 8,
        "medium": 6,
        "small": 6,
      }
    }
    isOpen={true}
    onRequestClose={[Function]}
    overlayClassName="TCPModal__Overlay"
  >
    <Styled(Grid)>
      <Styled(Row)
        fullBleed={true}
      >
        <Styled(Col)
          colSize={
            Object {
              "large": 4,
              "medium": 4,
              "small": 4,
            }
          }
          hideCol={
            Object {
              "medium": true,
              "small": true,
            }
          }
        >
          <Styled(Image) />
        </Styled(Col)>
        <Styled(Col)
          colSize={
            Object {
              "large": 8,
              "medium": 6,
              "small": 4,
            }
          }
          ignoreGutter={
            Object {
              "large": true,
            }
          }
          offsetLeft={
            Object {
              "large": 0,
              "medium": 1,
              "small": 1,
            }
          }
        >
          <Styled(SignupConfirm)
            formViewConfig={Object {}}
          />
          <Styled(Button)
            buttonVariation="variable-width"
            className="shop-button"
            disabled={false}
            fill="BLUE"
            fullWidth={true}
            onClick={[Function]}
            type="submit"
          />
        </Styled(Col)>
      </Styled(Row)>
    </Styled(Grid)>
  </errorBoundaryComponent>
  <Styled(Button)
    customStyle="shadow-button"
    onClick={[Function]}
  >
    <Styled(RichText) />
  </Styled(Button)>
</Fragment>
`;

exports[`EmailSignupModal component renders correctly when button is clicked 2`] = `
<Fragment>
  <errorBoundaryComponent
    className=""
    colSet={
      Object {
        "large": 8,
        "medium": 6,
        "small": 6,
      }
    }
    isOpen={true}
    onRequestClose={[Function]}
    overlayClassName="TCPModal__Overlay"
  >
    <form
      onSubmit={[Function]}
    >
      <Styled(Grid)>
        <Styled(Row)
          className="wrapper"
          fullBleed={
            Object {
              "large": true,
              "medium": false,
              "small": false,
            }
          }
        >
          <Styled(Col)
            colSize={
              Object {
                "large": 4,
                "medium": 4,
                "small": 4,
              }
            }
            hideCol={
              Object {
                "medium": true,
                "small": true,
              }
            }
          >
            <Styled(Image) />
          </Styled(Col)>
          <Styled(Col)
            colSize={
              Object {
                "large": 8,
                "medium": 8,
                "small": 6,
              }
            }
          >
            <Styled(SignupFormIntro)
              formViewConfig={Object {}}
            />
            <Styled(Col)
              className="field-container"
              colSize={
                Object {
                  "large": 10,
                  "medium": 6,
                  "small": 6,
                }
              }
              offsetLeft={
                Object {
                  "large": 1,
                  "medium": 1,
                  "small": 0,
                }
              }
            >
              <Field
                className=""
                component={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "sc-gzVnrw",
                      "isStatic": false,
                      "rules": Array [
                        "
  ",
                        "
  position: relative;
  display: block;
  height: 70px;

  .TextBox__label {
    font-size: ",
                        [Function],
                        "px;
    padding: 0;
    position: absolute;
    top: ",
                        [Function],
                        ";
    ",
                        [Function],
                        "
  }

  .TextBox__input {
    margin: 0;
    outline: 0;
    font-size: ",
                        [Function],
                        "px;
    color: ",
                        [Function],
                        ";
    width: 100%;
    background-position: left top;
    background-repeat: no-repeat;
    background-size: contain;
    border: 0 solid transparent;
    border-bottom: 1px solid ",
                        [Function],
                        ";
    padding-bottom: ",
                        [Function],
                        ";
    margin-bottom: ",
                        [Function],
                        ";
    padding-top: ",
                        [Function],
                        ";

    ",
                        [Function],
                        "

    ",
                        [Function],
                        ";

    &:focus + .TextBox__label {
      font-size: ",
                        [Function],
                        "px;
      font-weight: ",
                        [Function],
                        ";
      top: 0;
    }
  }

  ",
                        [Function],
                        ";
",
                        ";
",
                      ],
                    },
                    "displayName": "Styled(TextBox)",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "sc-gzVnrw",
                    "target": [Function],
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                dataLocator="signup_textbox"
                id="signup"
                maxLength={50}
                name="signup"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
              />
              <Styled(BodyCopy)
                className="terms-label"
                color="text.primary"
                component="p"
                dataLocator=""
                fontFamily="secondary"
                fontSize="fs12"
                fontWeight="regular"
                letterSpacing="normal"
                lineHeight="normal"
                textAlign="left"
              />
            </Styled(Col)>
            <Styled(Col)
              className="button-wrapper__large"
              colSize={
                Object {
                  "large": 12,
                  "medium": 8,
                  "small": 6,
                }
              }
              hideCol={
                Object {
                  "medium": true,
                  "small": true,
                }
              }
            >
              <Styled(Button)
                buttonVariation="fixed-width"
                className="join-button"
                disabled={true}
                fill="BLUE"
                fullWidth={true}
                type="submit"
              />
            </Styled(Col)>
          </Styled(Col)>
        </Styled(Row)>
        <Styled(Row)
          className="button-row"
          fullBleed={true}
        >
          <Styled(Col)
            className="button-wrapper"
            colSize={
              Object {
                "large": 0,
                "medium": 8,
                "small": 6,
              }
            }
          >
            <Styled(Button)
              buttonVariation="fixed-width"
              className="join-button"
              disabled={true}
              fill="BLUE"
              fullWidth={true}
              type="submit"
            />
          </Styled(Col)>
        </Styled(Row)>
      </Styled(Grid)>
    </form>
  </errorBoundaryComponent>
  <Styled(Button)
    customStyle="shadow-button"
    onClick={[Function]}
  >
    <Styled(RichText) />
  </Styled(Button)>
</Fragment>
`;
